[metadata]
license_files =
  LICENSE.txt
  NOTICE.txt
  THIRD_PARTY.txt

[flake8]
max-line-length = 120

[tool:pytest]
addopts =
    --verbose
    --capture=fd
filterwarnings =
    ignore::DeprecationWarning
    ignore::UserWarning

[isort]
multi_line_output=3
include_trailing_comma=True
force_grid_wrap=0
use_parentheses=True
line_length=120
