[metadata]
license_files =
  LICENSE.txt
  NOTICE.txt
  THIRD_PARTY.txt

[flake8]
max-line-length = 120
extend-ignore = E203, W503
exclude = .git,__pycache__,docs/source/conf.py,old,build,dist,.venv,.venv2,.tox,dev,.env,.coverage

[mypy]
python_version = 3.6
strict = True
ignore_missing_imports = True

[mypy-tests.*]
ignore_errors = True
