[tool.poetry]
name = "awswrangler - test infrastructure"
version = "3.10.0"
description = "CDK test infrastructure for AWS SDK for pandas"
authors = ["Amazon Web Services"]
license = "Apache License 2.0"

[tool.poetry.dependencies]
python = ">=3.8, <4.0"
"aws-cdk-lib" = "^2.128.0"
"aws-cdk.aws-glue-alpha" = "^2.128.0a0"
"aws-cdk.aws-neptune-alpha" = "^2.128.0a0"
"aws-cdk.aws-redshift-alpha" = "^2.128.0a0"
